[gd_scene load_steps=12 format=3 uid="uid://68p1lb4rpmc8"]

[ext_resource type="Script" path="res://scenes/enemies/walking_enemy.gd" id="1_spiks"]
[ext_resource type="Texture2D" uid="uid://cuexxupt1i1e" path="res://art/tilemap-characters_packed.png" id="1_wewew"]
[ext_resource type="PackedScene" uid="uid://h8gv5muchrte" path="res://scenes/enemies/hitbox.tscn" id="3_bkv41"]

[sub_resource type="Animation" id="Animation_g1cay"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_20a3f"]
resource_name = "Walking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayh2p"]
_data = {
"RESET": SubResource("Animation_g1cay"),
"Walking": SubResource("Animation_20a3f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyc2s"]
size = Vector2(11, 9)

[sub_resource type="Animation" id="Animation_wimh0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ou4mk"]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.0507658),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_ibyg7"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.752941, 0.713726, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x81pm"]
_data = {
"RESET": SubResource("Animation_wimh0"),
"die": SubResource("Animation_ou4mk"),
"hit": SubResource("Animation_ibyg7")
}

[node name="WalkingEnemy" type="CharacterBody2D"]
z_index = 5
collision_layer = 4
script = ExtResource("1_spiks")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ayh2p")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("1_wewew")
hframes = 9
vframes = 3
frame = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -6.5)
shape = SubResource("RectangleShape2D_dyc2s")

[node name="RayCast2DL" type="RayCast2D" parent="."]
position = Vector2(-6, -2)
target_position = Vector2(0, 4)

[node name="RayCast2DR" type="RayCast2D" parent="."]
position = Vector2(5, -2)
target_position = Vector2(0, 4)

[node name="Hitbox" parent="." instance=ExtResource("3_bkv41")]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(-6, -2, -6, -9, -2, -11, -2, -14, -1, -16, 0, -16, 1, -14, 1, -11, 5, -9, 5, -2)

[node name="AnimationPlayerHit" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x81pm")
}
